Ingress-staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  namespace: portal
  labels:
    name: portal-app
spec:
  ingressClassName: nginx
  tls: 
  - hosts:
    - portal-staging-oke.carblip.com
    secretName: portal-app-ssl
  rules:
  - host: portal-staging-oke.carblip.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: portal-app
            port: 
              number: 80
